css/style.css
body {
  background: #ecf0f1;
  padding: 0;
  margin: 0;
}
html {
  font-size: 12px;
}
img {
  max-width: 100%;
}
a {
  text-decoration: none
}
nav {
  display: flex;
  background: #1B9CFC;
  padding: 5px 10px;
}

nav .title {
  flex: 1;
}

nav .title a {
  color: #fff;
}

nav .nav-items {
  margin: auto 0;
}

nav .nav-items a {
  color: #fff;
  font-weight: bold;
  text-decoration: none;
  padding: 5px;
}
nav .nav-items a:hover {
  font-weight: bolder;
  color: #3B3B98;
}

.container {
  display: flex;
  justify-content: space-between;
  margin: 0 0px;
}
.image {
  flex: 2;
}

.form {
  flex: 2;
  margin: auto;
}

.form h4 {
  text-align: center;
  color: #1B9CFC;
}

.field {
  text-align: center;
  margin: 10px 0;
}

.field span {
  font-weight: bolder;
}

.field input {
  padding: 8px;
  border: 1px solid #535c68;
  box-sizing: border-box;
  width: 200px;
}
.submit {
  text-align: center
}
.submit button {
  border: none;
  background: #1B9CFC;
  padding: 8px;
  color: #fff;
}
@media screen and (max-width: 992px) {
  body {
    background: #d1ccc0;
  }
}

@media screen and (max-width: 600px) {
  body {
    background: #84817a;
  }
  nav {
    flex-direction: column;
    padding: 0;
  }
  .container {
    flex-direction: column;
    padding: 0;
  }
  .form {
    width: 100%;
  }

  nav .nav-items a {
    display: block;
    border-bottom: 1px solid #fff;
    box-sizing: border-box;
    width: 100%;
  }
}

